# challengecode

./: .env  Dockerfile  README.md  api_test.py  docker-compose.yml  main.py  pyproject.toml
core/: config.py
db/: session.py
models/: __init__.py  metadata.py
schemas/: __init__.py  metadata.py
tests/: run_tests.py  test_api.py
